# cpp-gtests

./: CMakeLists.txt  README.md
include/: math.h
src/: main.cpp
tests/: tests.cpp
